--- a/html/registro.html
+++ b/html/registro.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="registro.css">
-    <link rel="icon" href="logo.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="../css/registro.css">
+    <link rel="icon" href="../logo.jpg" type="image/x-icon">
 
 </head>
 
@@ -50,10 +50,13 @@
                     </div>
                 </div>
 
-                <div class="form-group text-center">
-                    <label for="edad">Edad</label>
-                    <input type="number" class="form-control" id="edad" placeholder="Ingrese su edad" min="1" max="120"
-                        required>
+                <div class="form-group">
+                    <div class="col-5">
+                        <label for="edad">Edad</label>
+                        <input type="number" class="form-control" id="edad" placeholder="Ingrese su edad" min="1"
+                            max="120" required>
+                    </div>                    
+                
                 </div>
 
                 <button type="submit" class="btn btn-primary btn-block">Registrarse</button>
