--- a/html/registro.html
+++ b/html/registro.html
@@ -5,62 +5,82 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/registro.css">
-    <link rel="icon" href="../logo.jpg" type="image/x-icon">
-
+    <link rel="icon" href="../img/logo.jpg" type="image/x-icon">
 </head>
 
 <body>
     <div class="container d-flex justify-content-center align-items-center min-vh-100">
-        <div class="card p-4" style="width: 100%; max-width: 500px;  background-color: #c3eee6;">
-            <h3 class="text-center mb-4">Registro de Usuario</h3>
-            <form id="registerForm">
-                <div class="form-group">
-                    <label for="nombre">Nombre</label>
-                    <input type="text" class="form-control" id="nombre" placeholder="Ingrese su nombre" required>
-                </div>
+        <div class="d-flex align-items-center">
+            <!-- Nueva sección para la imagen -->
+            <div id="imagen" class="ml-4">
+                <img src="../img/cbum (1).png" alt="Descripción de la imagen">
+            </div>
 
-                <div class="form-group">
-                    <div class="row">
-                        <div class="col-6">
-                            <label for="apellidoPaterno">Apellido Paterno</label>
-                            <input type="text" class="form-control" id="apellidoPaterno" placeholder="Apellido paterno"
-                                required>
-                        </div>
-                        <div class="col-6">
-                            <label for="apellidoMaterno">Apellido Materno</label>
-                            <input type="text" class="form-control" id="apellidoMaterno" placeholder="Apellido materno"
-                                required>
+            <div class="card p-4" style="width: 100%; max-width: 500px; background-color: #c3eee6;">
+                <h3 class="text-center mb-4">Registro de Usuario</h3>
+                <form id="registerForm">
+                    <div class="form-group">
+                        <label for="nombre">Nombre</label>
+                        <input type="text" class="form-control input-3d" id="nombre" placeholder="Ingrese su nombre"
+                            required>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="row">
+                            <div class="col-6">
+                                <label for="apellidoPaterno">Apellido Paterno</label>
+                                <input type="text" class="form-control input-3d" id="apellidoPaterno"
+                                    placeholder="Apellido paterno" required>
+                            </div>
+                            <div class="col-6">
+                                <label for="apellidoMaterno">Apellido Materno</label>
+                                <input type="text" class="form-control input-3d" id="apellidoMaterno"
+                                    placeholder="Apellido materno" required>
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="form-group">
-                    <div class="row">
-                        <div class="col-6">
-                            <label for="username">Nombre de usuario</label>
-                            <input type="text" class="form-control" id="username" placeholder="Nombre de usuario"
-                                required>
-                        </div>
-                        <div class="col-6">
-                            <label for="password">Contraseña</label>
-                            <input type="password" class="form-control" id="password" placeholder="Contraseña" required>
+                    <div class="form-group">
+                        <div class="row">
+                            <div class="col-6">
+                                <label for="username">Nombre de usuario</label>
+                                <input type="text" class="form-control input-3d" id="username"
+                                    placeholder="Nombre de usuario" required>
+                            </div>
+                            <div class="col-6">
+                                <label for="password">Contraseña</label>
+                                <input type="password" class="form-control input-3d" id="password"
+                                    placeholder="Contraseña" required>
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="form-group">
-                    <div class="col-5">
-                        <label for="edad">Edad</label>
-                        <input type="number" class="form-control" id="edad" placeholder="Ingrese su edad" min="1"
-                            max="120" required>
-                    </div>                    
-                
-                </div>
+                    <div class="form-group">
+                        <div class="row">
+                            <div class="col-6">
+                                <label for="edad">Edad</label>
+                                <input type="number" class="form-control input-3d" id="edad"
+                                    placeholder="Ingrese su edad" min="1" max="120" required>
+                            </div>
+                            <div class="col-6">
+                                <label for="sexo">Género</label>
+                                <select name="sexo" id="sexo" class="form-control input-3d" required>
+                                    <option value="" disabled selected>Seleccione su género</option>
+                                    <option value="masculino">Hombre</option>
+                                    <option value="femenino">Mujer</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
 
-                <button type="submit" class="btn btn-primary btn-block">Registrarse</button>
-            </form>
+                    <button type="submit" class="btn btn-register btn-block input-3d">
+                        <i class="fas fa-user-plus"></i> Registrarse
+                    </button>
+                </form>
+            </div>
         </div>
     </div>
 
@@ -69,8 +89,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-
-    <script> src = "registro.js" </script>
+    <script src="../js/registro.js"></script>
 </body>
 
 </html>
