Guardando cambios locales en login.html

--- a/html/login.html
+++ b/html/login.html
@@ -15,7 +15,7 @@
     <div id="contenido" class="container d-flex justify-content-center align-items-center min-vh-100">
         <div class="card p-5">
             <div id="imagen" class="text-center">
-                <img src="../logo.jpg" alt="Imagen de usuario" class="img-fluid rounded-circle mb-4"
+                <img src="/img/logo.jpg" alt="Imagen de usuario" class="img-fluid rounded-circle mb-4"
                     style="width: 200px; height: 200;">
             </div>
             <div class="sesion">
