Edicion completa de home

--- a/html/login.html
+++ b/html/login.html
@@ -17,7 +17,7 @@
             style="max-width: 400px; width: 100%; background-color: rgba(255, 255, 255, 0.8);">
             <div id="imagen" class="text-center mb-4">
                 <img src="../img/logo.jpg" alt="Imagen de usuario" class="img-fluid rounded-circle"
-                    style="width: 150px; height: 150px;">
+                    style="width: 150px;">
             </div>
             <form id="loginForm">
                 <div class="form-group mb-3">
