--- a/html/registro.html
+++ b/html/registro.html
@@ -12,77 +12,148 @@
 </head>
 
 <body>
-    <div class="container d-flex justify-content-center align-items-center min-vh-100">
-        <div class="d-flex align-items-center">
-            <!-- Nueva sección para la imagen -->
-            <div id="imagen" class="ml-4">
-                <img src="../img/cbum (1).png" alt="Descripción de la imagen">
-            </div>
+    <section id="seccion1">
+        <div class="container d-flex justify-content-center align-items-center min-vh-100">
+            <div class="d-flex align-items-center">
+                <!-- Nueva sección para la imagen -->
+                <div id="imagen" class="ml-4">
+                    <img src="../img/cbum (1).png" alt="Descripción de la imagen">
+                </div>
 
-            <div class="card p-4" style="width: 100%; max-width: 500px; background-color: #c3eee6;">
-                <h3 class="text-center mb-4">Registro de Usuario</h3>
-                <form id="registerForm">
-                    <div class="form-group">
-                        <label for="nombre">Nombre</label>
-                        <input type="text" class="form-control input-3d" id="nombre" placeholder="Ingrese su nombre"
-                            required>
-                    </div>
+                <div class="card p-4" style="width: 100%; max-width: 500px; background-color: #c3eee6;">
+                    <h3 class="text-center mb-4">Registro de Usuario</h3>
+                    <form id="registerForm">
+                        <div class="form-group">
+                            <label for="nombre">Nombre</label>
+                            <input type="text" class="form-control input-3d" id="nombre" placeholder="Ingrese su nombre"
+                                required>
+                        </div>
 
-                    <div class="form-group">
-                        <div class="row">
-                            <div class="col-6">
-                                <label for="apellidoPaterno">Apellido Paterno</label>
-                                <input type="text" class="form-control input-3d" id="apellidoPaterno"
-                                    placeholder="Apellido paterno" required>
-                            </div>
-                            <div class="col-6">
-                                <label for="apellidoMaterno">Apellido Materno</label>
-                                <input type="text" class="form-control input-3d" id="apellidoMaterno"
-                                    placeholder="Apellido materno" required>
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-6">
+                                    <label for="apellidoPaterno">Apellido Paterno</label>
+                                    <input type="text" class="form-control input-3d" id="apellidoPaterno"
+                                        placeholder="Apellido paterno" required>
+                                </div>
+                                <div class="col-6">
+                                    <label for="apellidoMaterno">Apellido Materno</label>
+                                    <input type="text" class="form-control input-3d" id="apellidoMaterno"
+                                        placeholder="Apellido materno" required>
+                                </div>
                             </div>
                         </div>
-                    </div>
 
-                    <div class="form-group">
-                        <div class="row">
-                            <div class="col-6">
-                                <label for="username">Nombre de usuario</label>
-                                <input type="text" class="form-control input-3d" id="username"
-                                    placeholder="Nombre de usuario" required>
-                            </div>
-                            <div class="col-6">
-                                <label for="password">Contraseña</label>
-                                <input type="password" class="form-control input-3d" id="password"
-                                    placeholder="Contraseña" required>
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-6">
+                                    <label for="username">Nombre de usuario</label>
+                                    <input type="text" class="form-control input-3d" id="username"
+                                        placeholder="Nombre de usuario" required>
+                                </div>
+                                <div class="col-6">
+                                    <label for="password">Contraseña</label>
+                                    <input type="password" class="form-control input-3d" id="password"
+                                        placeholder="Contraseña" required>
+                                </div>
                             </div>
                         </div>
-                    </div>
 
-                    <div class="form-group">
-                        <div class="row">
-                            <div class="col-6">
-                                <label for="edad">Edad</label>
-                                <input type="number" class="form-control input-3d" id="edad"
-                                    placeholder="Ingrese su edad" min="1" max="120" required>
-                            </div>
-                            <div class="col-6">
-                                <label for="sexo">Género</label>
-                                <select name="sexo" id="sexo" class="form-control input-3d" required>
-                                    <option value="" disabled selected>Seleccione su género</option>
-                                    <option value="masculino">Hombre</option>
-                                    <option value="femenino">Mujer</option>
-                                </select>
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-6">
+                                    <label for="edad">Edad</label>
+                                    <input type="number" class="form-control input-3d" id="edad"
+                                        placeholder="Ingrese su edad" min="1" max="120" required>
+                                </div>
+                                <div class="col-6">
+                                    <label for="sexo">Género</label>
+                                    <select name="sexo" id="sexo" class="form-control input-3d" required>
+                                        <option value="" disabled selected>Seleccione su género</option>
+                                        <option value="masculino">Hombre</option>
+                                        <option value="femenino">Mujer</option>
+                                    </select>
+                                </div>
                             </div>
                         </div>
-                    </div>
 
-                    <button type="submit" class="btn btn-register btn-block input-3d">
-                        <i class="fas fa-user-plus"></i> Registrarse
-                    </button>
-                </form>
+                        <button type="submit" class="btn btn-register btn-block input-3d">
+                            <i class="fas fa-user-plus"></i> Suguiente
+                        </button>
+                    </form>
+                </div>
             </div>
         </div>
-    </div>
+    </section>
+    <section id="seccion2">
+        <div class="container d-flex justify-content-center align-items-center min-vh-100">
+            <div class="d-flex align-items-center">
+                <!-- Nueva sección para la imagen -->
+                <div id="imagen1" class="ml-4">
+                    <img src="../img/cbum2.png" alt="Descripción de la imagen">
+                </div>
+                <div class="card p-4" style="width: 100%; max-width: 500px; background-color: #c3eee6;">
+                    <h3 class="text-center mb-4">Mediciones Físicas</h3>
+                    <form id="registerForm">
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-6">
+                                    <label for="peso">Peso</label>
+                                    <input type="number" class="form-control input-3d" id="peso" placeholder="Peso en kg"
+                                        required>
+                                </div>
+                                <div class="col-6">
+                                    <label for="peso">Altura</label>
+                                    <input type="number" class="form-control input-3d" id="peso"
+                                        placeholder="Altura en cm" required>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="tipoIngesta">Tipo de Ingesta</label>
+                            <select name="tipoIngesta" id="tipoIngest" class="form-control input-3d" required>
+                                <option value="" disabled selected>Seleccione tu Ingesta Calorica</option>
+                                <option value="deficit">Deficit Calorico</option>
+                                <option value="supervit">Superavit Calorico</option>
+                                <option value="mantenimiento">Mantenimiento</option>
+                            </select>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-6">
+                                    <label for="imc">Indice de Masa Corporal</label>
+                                    <input type="number" class="form-control input-3d" id="imc"
+                                        placeholder="Ingresa el imc" required>
+                                </div>
+                                <div class="col-6">
+                                    <label for="igc">Indice de Grasa Corporal</label>
+                                    <input type="number" class="form-control input-3d" id="igc"
+                                        placeholder="Ingresa el igc" required>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group align-items-center">
+                            <div class="container text-center">
+                                <div class="align-items-center">
+                                    <label for="tmb">Calorias de Mantenimiento</label>
+                                    <input type="number" class="form-control input-3d" id="tmb"
+                                        placeholder="Ingresa el tmb" required>
+                                </div>
+                            </div>
+                        </div>
+
+                        <button type="submit" class="btn btn-register btn-block input-3d">
+                            <i class="fas fa-user-plus"></i> Finalizar Registro
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <!-- JavaScript de Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
